# jspreadsheet

./: .gitignore  README.md  jspreadsheet.cabal  nginx.conf
src/: Main.hs  SpreadsheetTypes.hs  WSAction.hs  WSCommon.hs  WSServer.hs
src/public/css/: screen.css
src/public/html/: main.html
